Fix issue where recipes' cards are not centered
Centered cards in recipe pages.

--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ h1, p, .image, .desc {
 }
 
 .listcontainer {
-    height: 204px;
+    height: auto;
     width: 500px;
     margin: 10px;
     padding: 10px;
@@ -28,6 +28,8 @@ h1, p, .image, .desc {
 
 .flexcontainer {
     display: flex;
+    width: 1050px;
+    margin: auto;
 }
 
 ol, ul, li, h3 {
